# TechBit

./: .gitignore  dummy_script.json  main.py  pyproject.toml  requirements.txt
Classes/: code_generator.py  media_downloader.py  photo_finder.py  script_maker.py  utils.py  voice_over.py
Tests/: test_media_downloader.py  test_scriptor.py  test_voiceover.py
