[project]
name = "techbit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "dotenv>=0.9.9",
    "elevenlabs>=2.8.0",
    "moviepy>=2.2.1",
    "ollama>=0.5.1",
    "openai>=1.97.1",
    "pytest>=8.4.1",
    "requests>=2.32.4",
]
