[project]
name = "techbit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gtts==2.5.4",
    "moviepy==2.2.1",
    "ollama==0.5.1",
    "pillow==11.3.0",
    "pygments==2.19.2",
    "pytest==8.4.1",
    "python-dotenv==1.1.1",
]
